fix: choosing headlines and icon alignment, fix: list alignment, fix: mixin text-left to use it combined with flex-center

--- a/src/scss/abstract/mixins.scss
+++ b/src/scss/abstract/mixins.scss
@@ -12,7 +12,5 @@
 
 @mixin text-left {
     display: flex;
-    flex-direction: column;
-    align-items: left;
-    justify-content: center;
+    justify-content: flex-start !important;
 }
