--- a/src/scss/components/_list.scss
+++ b/src/scss/components/_list.scss
@@ -2,4 +2,6 @@
 
 li {
     cursor: pointer;
+    @include mx.flex-center;
+    @include mx.text-left;
 }
